GH 1781 - Fixed css alignment issues on a couple of pages
Mainly Org details and new changeset

--- a/app/assets/stylesheets/katello.scss
+++ b/app/assets/stylesheets/katello.scss
@@ -1324,7 +1324,6 @@ footer a {
 
 .container_16 {
   width: $static_width - 20;
-  float: left;
   .grid_16 {
     width: $static_width - 20;
   }
